[tool.poetry]
name = "jupyterhub-mixed-contents-manager"
version = "0.1.0"
description = ""
authors = ["Jessie Ross <j@scjr.me>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = {extras = ["all"], version = "^8.22.2"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
