[tool.poetry]
name = "jupyterhub-mixed-contents-manager"
version = "0.1.0"
description = ""
authors = ["Jessie Ross <j@scjr.me>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-server = ">=2, <3"
traitlets = ">=5, <6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
